# combination

./: .gitignore  meson.build
lib/vector/: vector.c  vector.h
src/: combination.c  combination.h  factorial.cc  factorial.h  main.c  main.cc  prime.c  prime.h
tests/: combination_test.cc  factorial_test.cc  prime_test.cc
